--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,10 +6,14 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js?app=skills"></script>
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
-  <title></title>
+  <title>Awesomeness in a Box</title>
 </head>
 <body>  
+
+<a href="/"> HOME </a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="/articles/1"> ARTICLE 1 (Widget this page!) </a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/articles/1/votes"> VOTE RESULTS </a> 
+
   <%= yield %>
 </body>
 </html>
