--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,7 +12,7 @@
 </head>
 <body>  
 
-<a href="/"> HOME </a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="/articles/1"> ARTICLE 1 (Widget this page!) </a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/articles/1/votes"> VOTE RESULTS </a> 
+<a href="/"> HOME </a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="/articles/1"> ARTICLE 1 (Widget this page!) </a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/articles/1/votes"> VOTE RESULTS </a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/zmitton/helpful_widget"> THE CODE (exact code on github) </a>
 
   <%= yield %>
 </body>
