--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,6 +8,8 @@
   <script src="/js/application.js?app=skills"></script>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
   <title>Awesomeness in a Box</title>
 </head>
 <body>  
