--- a/public/css/application.css
+++ b/public/css/application.css
@@ -18,6 +18,12 @@ body{
     font-size: 25px;
 }
 
+@media only screen and (min-width: 40em) {
+    #content_wrapper{
+        font-size: 18px;
+    }
+}
+
 #widget_container{
 	border-radius: 5px;
   
