--- a/public/css/application.css
+++ b/public/css/application.css
@@ -18,7 +18,7 @@ body{
     font-size: 25px;
 }
 
-@media only screen and (min-width: 40em) {
+@media only screen and (max-width: 40em) {
     #content_wrapper{
         font-size: 18px;
     }
