--- a/app/views/votes.erb
+++ b/app/views/votes.erb
@@ -3,8 +3,8 @@
 	</br>
 	<h1>Was This Article Helpful?</h1>
 	<h2>After <%= @votes.length %> votes, here are the results</h2>
-  <div id="piechart" style="width: 900px; height: 500px;"></div>
-  <div id="barchart" style="width: 900px; height: 500px;"></div>
+  <div id="piechart" ></div>
+  <div id="barchart" ></div>
   <script type="text/javascript">
     google.load("visualization", "1", {packages:["corechart"]});
     google.setOnLoadCallback(drawChart);
