--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,7 +14,9 @@
 </head>
 <body>  
 
-<a href="/"> HOME </a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="/articles/1"> ARTICLE 1 (Widget this page!) </a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/articles/1/votes"> VOTE RESULTS </a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/zmitton/helpful_widget"> THE CODE (exact code on github) </a>
+<nav>
+	<a href="/"> HOME </a> <a href="/articles/1"> ARTICLE 1 (Widget this page!) </a> <a href="/articles/1/votes"> VOTE RESULTS </a> <a href="https://github.com/zmitton/helpful_widget"> THE CODE (exact code on github) </a>
+</nav>
 
   <%= yield %>
 </body>
