--- a/public/css/application.css
+++ b/public/css/application.css
@@ -13,6 +13,10 @@ body{
 	margin-right: auto;
 }
 
+nav a{
+    padding: 20px;
+}
+
     #barchart, #piechart{
         width: 900px; 
         height: 500px;        
