--- a/app/views/test.erb
+++ b/app/views/test.erb
@@ -41,4 +41,4 @@ So now I have the data, and I need to display the rest of the page to display sa
 
 
 </body>
-<script src="http://localhost:9393/js/hnh_script.js"></script>
+<script src="http://helpful-not-helpful.zacmitton.com/js/hnh_script.js"></script>
