--- a/public/css/hnh_widget.css
+++ b/public/css/hnh_widget.css
@@ -37,8 +37,8 @@ nav a{
         height: 250px;        
     }
 
-id="barchart" style="width: 900px; height: 500px;"
-
+/*id="barchart" style="width: 900px; height: 500px;"
+*/
 }
 
 #widget_container{
